--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".model.RegisterActivity">
+    tools:context=".view.RegisterActivity">
 
     <View
         android:id="@+id/containerComponents"
@@ -34,7 +34,8 @@
         app:layout_constraintEnd_toEndOf="@+id/containerComponents"
         app:layout_constraintStart_toStartOf="@+id/containerComponents"
         app:layout_constraintTop_toTopOf="@+id/containerComponents"
-        app:layout_constraintVertical_bias="0.319" />
+        app:layout_constraintVertical_bias="0.319"
+        android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"/>
 
     <EditText
         android:id="@+id/edtRuaRg"
@@ -50,7 +51,8 @@
         android:textColorHint="@color/cinza"
         app:layout_constraintEnd_toEndOf="@+id/containerComponents"
         app:layout_constraintStart_toStartOf="@+id/containerComponents"
-        app:layout_constraintTop_toBottomOf="@+id/edtBairroRg" />
+        app:layout_constraintTop_toBottomOf="@+id/edtBairroRg"
+        android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"/>
 
     <EditText
         android:id="@+id/edtComplementoRg"
@@ -66,7 +68,8 @@
         android:textColorHint="@color/cinza"
         app:layout_constraintEnd_toEndOf="@+id/containerComponents"
         app:layout_constraintStart_toStartOf="@+id/containerComponents"
-        app:layout_constraintTop_toBottomOf="@+id/edtRuaRg" />
+        app:layout_constraintTop_toBottomOf="@+id/edtRuaRg"
+        android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"/>
 
     <EditText
         android:id="@+id/edtSenhaRg"
@@ -109,7 +112,8 @@
         app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="@+id/containerComponents"
         app:layout_constraintTop_toTopOf="@+id/containerComponents"
-        android:inputType="text" />
+        android:inputType="text"
+        android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"/>
 
     <EditText
         android:id="@+id/edtEmailRg"
@@ -126,7 +130,8 @@
         app:layout_constraintEnd_toEndOf="@+id/containerComponents"
         app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="@+id/containerComponents"
-        app:layout_constraintTop_toBottomOf="@+id/edtNomeRg" />
+        app:layout_constraintTop_toBottomOf="@+id/edtNomeRg"
+        android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM @ ."/>
 
 
     <com.santalu.maskara.widget.MaskEditText
