--- a/app/src/main/res/layout/fragment_carrinho_vazio.xml
+++ b/app/src/main/res/layout/fragment_carrinho_vazio.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/frame_layoutCarVaz"
-    tools:context=".model.fragments.CarrinhoVazioFragment">
+    tools:context=".view.fragments.CarrinhoVazioFragment">
 
     <ImageView
         android:id="@+id/imageView"
