--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".model.MenuActivity">
+    tools:context=".view.MenuActivity">
 
     <View
         android:id="@+id/containerCompAlt"
@@ -116,7 +116,8 @@
         app:layout_constraintEnd_toEndOf="@+id/containerCompAlt"
         app:layout_constraintStart_toStartOf="@+id/containerCompAlt"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.319" />
+        app:layout_constraintVertical_bias="0.319"
+        android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"/>
 
     <EditText
         android:id="@+id/edtRua_alt"
@@ -132,7 +133,8 @@
         android:textColorHint="@color/cinza"
         app:layout_constraintEnd_toEndOf="@+id/containerCompAlt"
         app:layout_constraintStart_toStartOf="@+id/containerCompAlt"
-        app:layout_constraintTop_toBottomOf="@+id/edtBairro_alt" />
+        app:layout_constraintTop_toBottomOf="@+id/edtBairro_alt"
+        android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"/>
 
     <EditText
         android:id="@+id/edtComplemento_alt"
@@ -148,7 +150,8 @@
         android:textColorHint="@color/cinza"
         app:layout_constraintEnd_toEndOf="@+id/containerCompAlt"
         app:layout_constraintStart_toStartOf="@+id/containerCompAlt"
-        app:layout_constraintTop_toBottomOf="@+id/edtRua_alt" />
+        app:layout_constraintTop_toBottomOf="@+id/edtRua_alt"
+        android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"/>
 
     <TextView
         android:id="@+id/textView2"
