--- a/app/src/main/res/layout/fragment_carrinho.xml
+++ b/app/src/main/res/layout/fragment_carrinho.xml
@@ -144,6 +144,14 @@
             android:background="@color/black"
             android:layout_above="@id/edtDataEntrega"/>
 
+        <TextView
+            android:id="@+id/frete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtRSFINAL"
+            android:layout_marginStart="8dp"
+            android:text="Frete: R$ 8,00" />
+
     </RelativeLayout>
 
 </FrameLayout>
